# mdx2md

./: Cargo.toml  README.md  build-wasm.sh  publish.sh
.github/workflows/: playground.yml
benchmarks/mdx-js/: bench.mjs  package.json
crates/mdx2md-cli/: Cargo.toml
crates/mdx2md-cli/src/: main.rs
crates/mdx2md-core/: Cargo.toml
crates/mdx2md-core/benches/: convert.rs
crates/mdx2md-core/src/: ast.rs  config.rs  lib.rs  parser.rs  rewriter.rs  tokenizer.rs  transform.rs
crates/mdx2md-core/tests/: commonmark_spec.rs
crates/mdx2md-core/tests/fixtures/: adversarial.md  adversarial.mdx  adversarial.toml  esm_only.md  esm_only.mdx  expressions_only.md  expressions_only.mdx  expressions_only.toml  jsx_only.md  jsx_only.mdx  jsx_only.toml  kitchen_sink.md  kitchen_sink.mdx  kitchen_sink.toml  tables_links.md  tables_links.mdx  tables_links.toml
crates/mdx2md-wasm/: Cargo.toml
crates/mdx2md-wasm/src/: lib.rs
docs/: benchmarking-and-test-plan.md  llm-sanitization.md
npm/: package.json
playground/: html-md.html  index.html  sanitize.html
