[package]
name = "mdx2md-core"
version = "0.2.0"
edition = "2021"
description = "MDX to Markdown converter core library"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
pulldown-cmark = "0.12"

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "convert"
harness = false
